Re-enable GHA runners for multiple accounts/organizations

--- a/argocd/github-actions-runner-application.yaml
+++ b/argocd/github-actions-runner-application.yaml
@@ -24,8 +24,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/argocd-applications
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -38,8 +38,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/argocd-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -52,8 +52,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/awx-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -66,8 +66,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/awx-operator-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -80,8 +80,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/ceph-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -94,8 +94,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/cert-manager-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -108,8 +108,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/cilium-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -122,8 +122,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/coredns-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -136,8 +136,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/eck-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -150,8 +150,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/elk-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -164,8 +164,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/external-dns-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -178,8 +178,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/external-secrets-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -192,8 +192,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/fluentd-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -206,8 +206,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/freeipa-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -220,8 +220,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/gateway-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -234,8 +234,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/github-actions-runner-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -248,8 +248,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/github-actions-runner-controller-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -262,8 +262,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/grafana-operator-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -276,8 +276,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/keycloak-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -290,8 +290,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/local-path-provisioner-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -304,8 +304,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/local-storage-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -318,8 +318,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/local-storage-provisioner-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -332,8 +332,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/metrics-server-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -346,8 +346,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-morphacy-gha-rs-controller
+    #       githubConfigSecret: github-config-morphacy
     #       githubConfigUrl: https://github.com/Morphacy/Morphacy
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -356,40 +356,12 @@ spec:
     #   targetRevision: 0.13.1
     # - chart: actions-runner-controller-charts/gha-runner-scale-set
     #   helm:
-    #     releaseName: chris-pc-morphacy-entities
-    #     valuesObject:
-    #       controllerServiceAccount:
-    #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
-    #       githubConfigUrl: https://github.com/Morphacy/Morphacy.Entities
-    #       minRunners: 0
-    #       namespace: github-actions-runner
-    #   ref: helm-morphacy-entities
-    #   repoURL: ghcr.io/actions
-    #   targetRevision: 0.13.1
-    # - chart: actions-runner-controller-charts/gha-runner-scale-set
-    #   helm:
-    #     releaseName: chris-pc-morphacy-entities-journaling
-    #     valuesObject:
-    #       controllerServiceAccount:
-    #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
-    #       githubConfigUrl: https://github.com/Morphacy/Morphacy.Entities.Journaling
-    #       minRunners: 0
-    #       namespace: github-actions-runner
-    #   ref: helm-morphacy-entities-journaling
-    #   repoURL: ghcr.io/actions
-    #   targetRevision: 0.13.1
-    # - chart: actions-runner-controller-charts/gha-runner-scale-set
-    #   helm:
     #     releaseName: chris-pc-netbox
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/netbox-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -402,8 +374,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/monitoring-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -416,8 +388,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/nvidia-k8s-device-plugin-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -430,8 +402,8 @@ spec:
     # #     valuesObject:
     # #       controllerServiceAccount:
     # #         namespace: github-actions-runner-controller
-    # #         name: github-actions-runner-controller-gha-rs-controller
-    # #       githubConfigSecret: github-config
+    # #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    # #       githubConfigSecret: github-config-chrismlee42
     # #       githubConfigUrl: https://github.com/chrismlee42/openebs-config
     # #       minRunners: 0
     # #       namespace: github-actions-runner
@@ -444,8 +416,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/rook-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -458,8 +430,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/secrets-store-csi-driver-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -472,8 +444,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/valkey-operator-config
     #       minRunners: 0
     #       namespace: github-actions-runner
@@ -486,8 +458,8 @@ spec:
     #     valuesObject:
     #       controllerServiceAccount:
     #         namespace: github-actions-runner-controller
-    #         name: github-actions-runner-controller-gha-rs-controller
-    #       githubConfigSecret: github-config
+    #         name: github-actions-runner-controller-chrismlee42-gha-rs-controller
+    #       githubConfigSecret: github-config-chrismlee42
     #       githubConfigUrl: https://github.com/chrismlee42/vault-config
     #       minRunners: 0
     #       namespace: github-actions-runner
