Revert "Reenable GHA runner controller for multiple accounts/organizations"
This reverts commit e4edde0db8b71d9f86922d55cd0072617c2c8173.

--- a/argocd/github-actions-runner-controller-application.yaml
+++ b/argocd/github-actions-runner-controller-application.yaml
@@ -18,30 +18,14 @@ spec:
       ref: path
       repoURL: https://github.com/chrismlee42/github-actions-runner-controller-config.git
       targetRevision: HEAD
-    - chart: actions-runner-controller-charts/gha-runner-scale-set-controller
-      helm:
-        releaseName: github-actions-runner-controller-chrismlee42
-        valuesObject:
-          githubConfigSecret: github-config-chrismlee42
-      ref: helm-controller-chrismlee42
-      repoURL: ghcr.io/actions
-      targetRevision: 0.13.1
-    - chart: actions-runner-controller-charts/gha-runner-scale-set-controller
-      helm:
-        releaseName: github-actions-runner-controller-morphacy
-        valuesObject:
-          githubConfigSecret: github-config-morphacy
-      ref: helm-controller-morphacy
-      repoURL: ghcr.io/actions
-      targetRevision: 0.13.1
-    - chart: actions-runner-controller-charts/gha-runner-scale-set-controller
-      helm:
-        releaseName: github-actions-runner-controller-mutinysoftware
-        valuesObject:
-          githubConfigSecret: github-config-mutinysoftware
-      ref: helm-controller-mutinysoftware
-      repoURL: ghcr.io/actions
-      targetRevision: 0.13.1
+    # - chart: actions-runner-controller-charts/gha-runner-scale-set-controller
+    #   helm:
+    #     releaseName: github-actions-runner-controller
+    #     valuesObject:
+    #       githubConfigSecret: github-config-chrismlee42
+    #   ref: helm-controller
+    #   repoURL: ghcr.io/actions
+    #   targetRevision: 0.13.1
   syncPolicy:
     automated:
       prune: true
